<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/container_padding">

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="top|start"
        android:hint="@string/hint_input"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textNoSuggestions"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/crypt_algo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dropdown_height"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/text_encrypt"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_encrypt"
            android:src="@drawable/encrypt" />

        <ImageButton
            android:id="@+id/text_decrypt"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_decrypt"
            android:src="@drawable/decrypt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_item_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/hash_algo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dropdown_height"
            android:layout_marginEnd="@dimen/view_item_margin"
            android:layout_marginRight="@dimen/view_item_margin"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/text_pass"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/password"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="@dimen/password_icon_padding"
            android:hint="@string/hint_password"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/iv_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/iv_input"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@android:color/transparent"
            android:digits="0123456789ABCDEF: "
            android:hint="@string/hint_enter_iv"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:singleLine="true"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/iv_generate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/hint_ramdom"
            android:src="@drawable/random" />

    </LinearLayout>

    <EditText
        android:id="@+id/text_output"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/view_item_margin"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="top|start"
        android:hint="@string/hint_output"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|textNoSuggestions"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/hex_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="monospace"
            android:singleLine="true"
            android:thumbTextPadding="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_switch"
            android:layout_marginLeft="@dimen/margin_switch"
            android:layout_weight="1"
            android:text="@string/switch_hex_view"
            android:textColor="@color/switch_text_color" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/iv_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:fontFamily="monospace"
            android:singleLine="true"
            android:thumbTextPadding="20dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_switch"
            android:layout_marginLeft="@dimen/margin_switch"
            android:layout_weight="1"
            android:text="@string/switch_en_iv"
            android:textColor="@color/switch_text_color" />

    </LinearLayout>

</LinearLayout>